--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
+authors = ["Alexey Vyskubov <alexey@ocaml.nl>"]
+description = "Flexible CPU load generator"
 name = "molotilkar"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
+log = "0.4.17"
+rand_distr = "0.4.3"
+simple_logger = "4.0.0"
 sysinfo = "0.28.0"
