--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
 log = "0.4.17"
+rand = "0.8.5"
 rand_distr = "0.4.3"
 simple_logger = "4.0.0"
 sysinfo = "0.28.0"
